--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,4 @@
-aniso8601==9.0.1
-certifi==2022.6.15
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.5
-docopt==0.6.2
-Flask==2.2.2
-Flask-RESTful==0.3.9
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.3
-idna==3.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-pytz==2022.2.1
-requests==2.28.1
-six==1.16.0
-SQLAlchemy==1.4.40
-urllib3==1.26.12
-Werkzeug==2.2.2
-yarg==0.1.9
+Flask
+Flask-SQLAlchemy
+Flask-RESTful
+Flask-JWT-Extended
